--- a/css/style.css
+++ b/css/style.css
@@ -946,7 +946,7 @@ figure {
 }
 
 #fh5co-feature-product {
-  padding: 7em 0;
+  padding: auto;
 }
 
 #fh5co-services, #fh5co-about, #fh5co-contact {
